src/objects/TRAK_Regression_Defect__c.object
<CustomObject>
    <description>Regression Defect</description>
    <fields>
        <fullName>Defect_Developer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Defect Developer</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Regression Defects</relationshipLabel>
        <relationshipName>Regression_Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Defect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Defect</label>
        <referenceTo>TRAK_Bug__c</referenceTo>
        <relationshipLabel>Regression Defects</relationshipLabel>
        <relationshipName>Regression_Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Problem_Description__c</fullName>
        <label>Problem Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Problem_Summary__c</fullName>
        <label>Problem Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Root_Cause__c</fullName>
        <label>Root Cause</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sprint</label>
        <referenceTo>TRAK_Sprint__c</referenceTo>
        <relationshipLabel>Regression Defects</relationshipLabel>
        <relationshipName>Regression_Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Raised</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Backlog</fullName>
                </value>
                <value>
                    <fullName>In Analysis</fullName>
                </value>
                <value>
                    <fullName>Ready for Development</fullName>
                </value>
                <value>
                    <fullName>In Development</fullName>
                </value>
                <value>
                    <fullName>Ready for Test Release</fullName>
                </value>
                <value>
                    <fullName>In Test</fullName>
                </value>
                <value>
                    <fullName>Passed Test</fullName>
                </value>
                <value>
                    <fullName>Ready for Test PreProd</fullName>
                </value>
                <value>
                    <fullName>Passed Test PreProd</fullName>
                </value>
                <value>
                    <fullName>Ready for Release</fullName>
                </value>
                <value>
                    <fullName>Production - Released</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tester</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Regression Defects (Tester)</relationshipLabel>
        <relationshipName>Regression_Defects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Regression Defect</label>
    <nameField>
        <displayFormat>REGRESSION DEFECT-{0000}</displayFormat>
        <label>Regression Defect Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Regression Defects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Make_RootCause_and_Resolution_Mandatory</fullName>
        <active>true</active>
        <description>Please update the Root Cause and Resolution before updating the Regression Defect Status to Complete.</description>
        <errorConditionFormula>AND(OR(ISPICKVAL(Status__c, &apos;Passed Test&apos;), ISPICKVAL(Status__c, &apos;Passed Test PreProd&apos;),ISPICKVAL(Status__c, &apos;Production - Released&apos;)),OR((Root_Cause__c == null), (Resolution__c == null)) )</errorConditionFormula>
        <errorMessage>Please update the Root Cause and Resolution before updating the Regression Defect Status to Complete.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reg_Defect_should_be_Raised_on_Creation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNEW(),NOT(ISPICKVAL(Status__c,&apos;Raised&apos;)))</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>A Regresion Defect can only be created with Raised status.</errorMessage>
    </validationRules>
</CustomObject>